--- a/app/src/main/res/layout/inventory_snippet.xml
+++ b/app/src/main/res/layout/inventory_snippet.xml
@@ -10,41 +10,44 @@
             type="String" />
     </data>
     <RelativeLayout
-        android:layout_width="match_parent" android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dialogue_distance_sides"
             android:textSize="@dimen/txt_size_large"
             app:name="@{inventoryName}"/>
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/inv_picture"
             android:layout_width="@dimen/inventory_image_size"
             android:layout_height="@dimen/inventory_image_size"
+            android:layout_marginStart="@dimen/dialogue_distance_sides"
             android:layout_below="@+id/Title"
             android:imageResource="@{inventoryPic}" />
 
         <ImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/border_txt_name"
             android:layout_width="108dp"
             android:layout_height="@dimen/inventory_image_size"
             android:layout_below="@+id/Title"
-            android:layout_toEndOf="@+id/imageView5"
+            android:layout_toEndOf="@+id/inv_picture"
             app:srcCompat="@drawable/inventory_name_border" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/txt_name"
             android:layout_width="108dp"
             android:layout_height="@dimen/inventory_image_size"
-            android:layout_alignEnd="@+id/imageView8"
-            android:layout_alignBottom="@+id/imageView8"
+            android:layout_alignEnd="@+id/border_txt_name"
+            android:layout_alignBottom="@+id/border_txt_name"
             android:gravity="center"
             android:layout_marginStart="6dp"
             android:textSize="@dimen/txt_size_medium"
             android:layout_marginEnd="6dp"
-            android:layout_toEndOf="@+id/imageView5"
+            android:layout_toEndOf="@+id/inv_picture"
             android:text="@{inventoryName}" />
 
     </RelativeLayout>
