--- a/app/src/main/res/layout/fragment_random_benefit.xml
+++ b/app/src/main/res/layout/fragment_random_benefit.xml
@@ -36,7 +36,8 @@
             <FrameLayout
                 android:id="@+id/frame_inventory_snippet"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp">
             </FrameLayout>
         </LinearLayout>
 
