--- a/app/src/main/res/layout/activity_main_game.xml
+++ b/app/src/main/res/layout/activity_main_game.xml
@@ -16,11 +16,25 @@
         tools:context=".view.MainGameActivity">
 
         <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#2E2C2A"
+            app:layout_constraintBottom_toBottomOf="@+id/scroll_bottom"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+        </FrameLayout>
+
+        <FrameLayout
             android:id="@+id/scroll_top"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:background="@drawable/scroll_top"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/health_mana_image">
+
         </FrameLayout>
 
         <FrameLayout
@@ -31,14 +45,6 @@
             app:layout_constraintBottom_toBottomOf="parent">
         </FrameLayout>
 
-        <FrameLayout
-            android:id="@+id/back_main"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@drawable/scroll_back"
-            app:layout_constraintBottom_toTopOf="@id/fragment_container_game"
-            app:layout_constraintTop_toBottomOf="@+id/scroll_top">
-        </FrameLayout>
 
         <Button
             android:id="@+id/btn_character"
@@ -158,7 +164,8 @@
             app:layout_constraintBottom_toTopOf="@+id/scroll_bottom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/health_mana_image">
+            app:layout_constraintTop_toBottomOf="@+id/scroll_top">
+
         </FrameLayout>
 
         <FrameLayout
@@ -170,7 +177,7 @@
             app:layout_constraintBottom_toTopOf="@+id/scroll_bottom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/health_mana_image">
+            app:layout_constraintTop_toBottomOf="@+id/scroll_top">
 
         </FrameLayout>
 
