--- a/app/src/main/res/layout/default_button_details.xml
+++ b/app/src/main/res/layout/default_button_details.xml
@@ -10,8 +10,9 @@
 
         <Button
             android:id="@+id/btn_default"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/default_btn_width"
             android:layout_height="@dimen/default_btn_height"
+            android:textSize="@dimen/txt_size_medium"
             android:text="@{title}" />
     </RelativeLayout>
 </layout>
