Trap and Random Encounter now saves  - all fragment dialogue functionality moves to abstract class EncounterDialogueFragment that implements EncounterFragment EncounterViewModel now abstract instead of interface  - much of the repeated functionality of the encounter viewModels implemented in abstract class generally more logic put into ViewModel from the fragment view switched the LinearLayout for programmatically added buttons to a gridLayout with columns size 2 bug fixed with adding health item doubling up the health added

--- a/app/src/main/res/layout/activity_character_choice.xml
+++ b/app/src/main/res/layout/activity_character_choice.xml
@@ -16,6 +16,13 @@
         android:layout_height="match_parent">
 
         <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/behind_scroll">
+
+        </FrameLayout>
+
+        <FrameLayout
             android:id="@+id/scroll_top"
             android:layout_width="match_parent"
             android:layout_height="70dp"
