--- a/app/src/main/res/layout/default_button_details.xml
+++ b/app/src/main/res/layout/default_button_details.xml
@@ -6,13 +6,15 @@
             type="String" />
     </data>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent" android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/btn_default"
             android:layout_width="@dimen/default_btn_width"
             android:layout_height="@dimen/default_btn_height"
             android:textSize="@dimen/txt_size_medium"
+            android:layout_alignParentTop="true"
             android:text="@{title}" />
     </RelativeLayout>
 </layout>
