--- a/app/src/main/res/layout/fragment_choice_benefit.xml
+++ b/app/src/main/res/layout/fragment_choice_benefit.xml
@@ -20,13 +20,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <GridLayout
                 android:id="@+id/layout_btn_options"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="horizontal">
-            </LinearLayout>
+                android:rowCount="2"
+                android:columnCount="2">
+            </GridLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_dialogue"
