--- a/app/src/main/res/layout/fragment_combat.xml
+++ b/app/src/main/res/layout/fragment_combat.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
-            name="trapVM"
-            type="com.habbybolan.textadventure.viewmodel.encounters.TrapEncounterViewModel"/>
+            name="combatVM"
+            type="com.habbybolan.textadventure.viewmodel.encounters.CombatViewModel" />
     </data>
+
     <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".view.encounter.TrapFragment">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:context=".view.encounter.RandomBenefitFragment">
+
         <LinearLayout
             android:id="@+id/trap_container"
             android:layout_width="match_parent"
@@ -21,15 +24,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:rowCount="2"
-                android:columnCount="2">
+                android:rowCount="1"
+                android:columnCount="3">
             </GridLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_dialogue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-        </LinearLayout>
 
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
