--- a/app/src/main/res/layout/fragment_combat.xml
+++ b/app/src/main/res/layout/fragment_combat.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".view.encounter.CombatFragment"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
-            name="combatVM"
-            type="com.habbybolan.textadventure.viewmodel.encounters.CombatViewModel" />
+            name="characterVM"
+            type="com.habbybolan.textadventure.viewmodel.CharacterViewModel" />
     </data>
 
     <androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".view.encounter.RandomBenefitFragment">
+    android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/trap_container"
@@ -19,14 +19,162 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <GridLayout
-                android:id="@+id/layout_btn_options"
+            <LinearLayout
+                android:id="@+id/action_select_enemy_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/combat_curr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/combat_next"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/combat_last"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/enemy_action_icons"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/character_action_icon"
+                android:layout_width="@dimen/combat_character_action_icon_size"
+                android:layout_height="@dimen/combat_character_action_icon_size"
                 android:layout_gravity="center"
-                android:rowCount="1"
-                android:columnCount="3">
-            </GridLayout>
+                android:visibility="gone"
+                app:imageResource="@{characterVM.drawableResID}"/>
+
+            <LinearLayout
+                android:id="@+id/rv_category_options"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <Button
+                    android:id="@+id/rv_category_weapons"
+                    style="@style/DefaultButton"
+                    android:layout_width="@dimen/default_btn_width"
+                    android:layout_height="@dimen/default_btn_height"
+                    android:text="@string/category_weapons_option"
+                    android:textSize="@dimen/txt_size_medium" />
+
+                <Button
+                    android:id="@+id/rv_category_abilities"
+                    style="@style/DefaultButton"
+                    android:layout_width="@dimen/default_btn_width"
+                    android:layout_height="@dimen/default_btn_height"
+                    android:text="@string/category_abilities_option"
+                    android:textSize="@dimen/txt_size_medium" />
+
+                <Button
+                    android:id="@+id/rv_category_items"
+                    style="@style/DefaultButton"
+                    android:layout_width="@dimen/default_btn_width"
+                    android:layout_height="@dimen/default_btn_height"
+                    android:text="@string/category_items_option"
+                    android:textSize="@dimen/txt_size_medium" />
+
+            </LinearLayout>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_weapons"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:visibility="visible" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_abilities"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_items"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
+
+            </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center">
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center">
+
+                    <Button
+                        android:id="@+id/btn_run"
+                        android:layout_width="@dimen/default_btn_width"
+                        android:layout_height="@dimen/default_btn_height"
+                        android:visibility="gone"
+                        android:textSize="@dimen/txt_size_medium"
+                        android:text="@string/btn_run">
+                    </Button>
+
+                    <Button
+                        android:id="@+id/btn_continue"
+                        android:layout_width="@dimen/default_btn_width"
+                        android:layout_height="@dimen/default_btn_height"
+                        android:textSize="@dimen/txt_size_medium"
+                        android:visibility="gone"
+                        android:text="@string/btn_continue">
+                    </Button>
+
+                </FrameLayout>
+
+                <GridLayout
+                    android:id="@+id/layout_btn_options"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:rowCount="1"
+                    android:columnCount="3">
+
+                </GridLayout>
+
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_dialogue"
