--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,9 @@
     <color name="colorManaDialogue">#3A89CD</color>
     <color name="colorInventoryDialogue">#2E7517</color>
 
+    <color name="colorAttackerDialogue">#CD0E0E</color>
+    <color name="colorTargetDialogue">#FFFFFF</color>
+    <color name="colorActionDialogue">#FFFFFF</color>
+
     <color name="behind_scroll">#2E2C2A</color>
 </resources>
