--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,9 @@
 
     <dimen name="icon_size">15dp</dimen>
     <dimen name="text_from_icon">5dp</dimen>
+    <dimen name="combat_order_icon_size">25dp</dimen>
+    <dimen name="combat_enemy_action_icon_size">50dp</dimen>
+    <dimen name="combat_character_action_icon_size">45dp</dimen>
 
     <dimen name="default_btn_height">42dp</dimen>
     <dimen name="default_btn_width">97dp</dimen>
