CharacterEntityViewModel added to deal with shared code of CharacterViewModel and EnemyViewModel  - allows for the enemies to be observed functionality for enemy to choose a random target and perform a random action from weapon or 2 abilities fixed abilities not applying damage properly  - fixed same problem with attack and special attack before enemy and character actions, applies dots and decrements special, stat and tempExtra effects observers for stats, special effects, dot and tempExtra changed to ObservableArrayList  - changed how the observers worked to make use of observable list implemented attack and special attack actions from character  - generalized methods to apply inventory action for ability and weapons fixed mana spell in database

--- a/app/src/main/res/layout/activity_main_game.xml
+++ b/app/src/main/res/layout/activity_main_game.xml
@@ -8,7 +8,7 @@
             type="com.habbybolan.textadventure.viewmodel.MainGameViewModel" />
         <variable
             name="characterViewModel"
-            type="com.habbybolan.textadventure.viewmodel.CharacterViewModel" />
+            type="com.habbybolan.textadventure.viewmodel.characterEntityViewModels.CharacterViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
