--- a/app/src/main/res/layout/activity_character_choice.xml
+++ b/app/src/main/res/layout/activity_character_choice.xml
@@ -8,7 +8,7 @@
             type="com.habbybolan.textadventure.viewmodel.CharacterChoiceViewModel" />
         <variable
             name="characterViewModel"
-            type="com.habbybolan.textadventure.viewmodel.CharacterViewModel" />
+            type="com.habbybolan.textadventure.viewmodel.characterEntityViewModels.CharacterViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
