--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="characterVM"
-            type="com.habbybolan.textadventure.viewmodel.CharacterViewModel" />
+            type="com.habbybolan.textadventure.viewmodel.characterEntityViewModels.CharacterViewModel" />
     </data>
     <ScrollView
         android:layout_width="match_parent"
