--- a/app/src/main/res/layout/fragment_combat.xml
+++ b/app/src/main/res/layout/fragment_combat.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="characterVM"
-            type="com.habbybolan.textadventure.viewmodel.CharacterViewModel" />
+            type="com.habbybolan.textadventure.viewmodel.characterEntityViewModels.CharacterViewModel" />
     </data>
 
     <androidx.core.widget.NestedScrollView
