fixed dot and special effects not visually updating on duration decrement  combat encounter changes   - action abstract class added for inventory objects that are also considered actions     - changed selectedAction in combat encounter from Inventory to Action Type   - cooldown functionality added and checking if action is ready to be used      - message shown if action still on cooldown attempting to be performed   - next turn for combat ordering will find the first alive characterEntity for the next turn start screen background added

--- a/app/src/main/res/layout/ability_item_list_details.xml
+++ b/app/src/main/res/layout/ability_item_list_details.xml
@@ -9,10 +9,20 @@
             name="name"
             type="String" />
     </data>
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/inventory_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/action_margin_top"
+        android:background="@drawable/action_back">
+
+        <ImageView
+            android:id="@+id/img_icon"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            app:imageResource="@{iconResource}"/>
+
 
         <TextView
             android:id="@+id/txt_name"
@@ -20,17 +30,8 @@
             android:layout_height="35dp"
             android:layout_marginStart="10dp"
             android:gravity="center_vertical"
-            android:layout_toEndOf="@+id/img_icon"
-            android:text="@{name}">
-        </TextView>
+            android:text="@{name}"/>
 
-        <ImageView
-            android:id="@+id/img_icon"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            app:imageResource="@{iconResource}">
-        </ImageView>
-
-    </RelativeLayout>
+    </LinearLayout>
 
 </layout>
