--- a/app/src/main/res/layout/activity_main_game.xml
+++ b/app/src/main/res/layout/activity_main_game.xml
@@ -16,6 +16,7 @@
         tools:context=".view.MainGameActivity">
 
         <FrameLayout
+            android:id="@+id/frameLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/behind_scroll">
@@ -157,7 +158,7 @@
             android:layout_height="0dp"
             android:background="@drawable/scroll_back"
             android:visibility="@{mainGameViewModel.characterFragmentVisible}"
-            app:layout_constraintBottom_toTopOf="@+id/scroll_bottom"
+            app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scroll_top">
@@ -170,7 +171,7 @@
             android:layout_height="0dp"
             android:background="@drawable/scroll_back"
             android:visibility="@{mainGameViewModel.gameFragmentVisible}"
-            app:layout_constraintBottom_toTopOf="@+id/scroll_bottom"
+            app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scroll_top">
