--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="android:fontFamily">@font/press_start_2p</item>
         <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#000000</item>
         <item name="buttonStyle">@style/DefaultButton</item>
     </style>
 
