Inventory information activity added  - shows the information of a selected inventory object  - added clickable image for the inventory info snippets in combat encounter  - added serializing of objects so all of their fields are stored in a JSON    - created static fields for Inventory objects to keep keys for JSON and databases consistent combat encounter  - stabilized weapons action snippet so the weapon snippet itself stays centered  - combat properly exits by fixing isAlive not updating on death  - put all views for the combat state into a single view container so it can be all removed at once  - fixed bug causing the last enemy alive to not be kill-able added a changeHealth method to deal with changes of health and maxHealth together  - fixed isAlive not updating  - changed damageTarget to deal with removing health of entity and returning the health change

--- a/app/src/main/res/layout/ability_item_list_details.xml
+++ b/app/src/main/res/layout/ability_item_list_details.xml
@@ -9,6 +9,7 @@
             name="name"
             type="String" />
     </data>
+
     <LinearLayout
         android:id="@+id/inventory_container"
         android:layout_width="wrap_content"
@@ -23,15 +24,22 @@
             android:layout_height="35dp"
             app:imageResource="@{iconResource}"/>
 
-
         <TextView
             android:id="@+id/txt_name"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_marginStart="10dp"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:text="@{name}"/>
 
+        <ImageView
+            android:id="@+id/inventory_info"
+            android:layout_width="@dimen/inventory_info_icon_size"
+            android:layout_height="@dimen/inventory_info_icon_size"
+            android:layout_marginStart="@dimen/inventory_info_icon_margins"
+            android:layout_marginEnd="@dimen/inventory_info_icon_margins"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/inventory_info" />
     </LinearLayout>
 
 </layout>
