--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:layout_height="@dimen/default_btn_height"
             android:layout_marginTop="104dp"
             android:text="@string/new_game"
+            android:textSize="@dimen/txt_size_medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +32,7 @@
             android:layout_height="@dimen/default_btn_height"
             android:layout_marginTop="104dp"
             android:text="@string/continue_game"
+            android:textSize="@dimen/txt_size_medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +45,7 @@
             android:layout_width="@dimen/default_btn_width"
             android:layout_height="@dimen/default_btn_height"
             android:text="@string/abandon"
-            android:textSize="@dimen/txt_size_small"
+            android:textSize="@dimen/txt_size_medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_continue_game"
