--- a/app/src/main/res/layout/weapon_list_details.xml
+++ b/app/src/main/res/layout/weapon_list_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
@@ -23,7 +24,8 @@
             name="sAttackName"
             type="String" />
     </data>
-    <RelativeLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -32,16 +34,18 @@
             android:id="@+id/weapon_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
             android:layout_marginTop="@dimen/action_margin_top"
-            android:background="@drawable/action_back">
+            android:background="@drawable/action_back"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/container">
 
             <ImageView
                 android:id="@+id/img_icon_weapon"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                app:imageResource="@{weaponIconResource}"/>
+                app:imageResource="@{weaponIconResource}" />
 
             <TextView
                 android:id="@+id/txt_name_weapon"
@@ -49,7 +53,8 @@
                 android:layout_height="35dp"
                 android:layout_marginStart="10dp"
                 android:gravity="center_vertical"
-                android:text="@{weaponName}"/>
+                android:text="@{weaponName}" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -57,10 +62,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/weapon_container"
-            android:layout_marginStart="30dp"
-            android:orientation="horizontal"
+            android:layout_marginStart="20sp"
             android:layout_marginTop="@dimen/action_margin_top"
-            android:background="@drawable/action_back">
+            android:background="@drawable/action_back"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="@+id/weapon_container"
+            app:layout_constraintTop_toBottomOf="@+id/weapon_container">
 
             <ImageView
                 android:id="@+id/img_icon_attack"
@@ -76,6 +83,15 @@
                 android:gravity="center_vertical"
                 android:text="@{attackName}" />
 
+            <ImageView
+                android:id="@+id/inventory_info_attack"
+                android:layout_width="@dimen/inventory_info_icon_size"
+                android:layout_height="@dimen/inventory_info_icon_size"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/inventory_info_icon_margins"
+                android:layout_marginEnd="@dimen/inventory_info_icon_margins"
+                app:srcCompat="@drawable/inventory_info" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -83,10 +99,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/attack_container"
-            android:layout_marginStart="30dp"
-            android:orientation="horizontal"
             android:layout_marginTop="@dimen/action_margin_top"
-            android:background="@drawable/action_back">
+            android:background="@drawable/action_back"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="@+id/attack_container"
+            app:layout_constraintTop_toBottomOf="@+id/attack_container">
 
             <ImageView
                 android:id="@+id/img_icon_s_attack"
@@ -102,8 +119,17 @@
                 android:gravity="center_vertical"
                 android:text="@{sAttackName}" />
 
+            <ImageView
+                android:id="@+id/inventory_info_s_attack"
+                android:layout_width="@dimen/inventory_info_icon_size"
+                android:layout_height="@dimen/inventory_info_icon_size"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/inventory_info_icon_margins"
+                android:layout_marginEnd="@dimen/inventory_info_icon_margins"
+                app:srcCompat="@drawable/inventory_info" />
+
         </LinearLayout>
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
